@@ -27,11 +27,6 @@ var ImpHtmlSignaturePrefs = {
         CKEDITOR.on('instanceReady', function(e) {
             this.ready = true;
         }.bind(this));
-
-        CKEDITOR.on('loaded', function(e) {
-            CKEDITOR.plugins.addExternal("pasteignore", this.pasteignore, "");
-            CKEDITOR.config.extraPlugins = CKEDITOR.config.extraPlugins.split(",").concat("pasteignore").join(",");
-        }.bind(this));
     }
 
 };
