@@ -32,7 +32,7 @@ class IMP_Prefs_Special_HtmlSignature implements Horde_Core_Prefs_Ui_Special
      */
     public function display(Horde_Core_Prefs_Ui $ui)
     {
-        global $injector, $page_output, $prefs;
+        global $conf, $injector, $page_output, $prefs;
 
         $page_output->addScriptFile('signaturehtml.js');
         $injector->getInstance('IMP_Editor')->init('signature_html');
@@ -44,10 +44,7 @@ class IMP_Prefs_Special_HtmlSignature implements Horde_Core_Prefs_Ui_Special
             $js[$key] = $identity->getValue('signature_html', $key);
         };
 
-        $jsfile = new Horde_Script_File_JsDir('ckeditor/pasteignore.js', 'imp');
-
         $page_output->addInlineJsVars(array(
-            'ImpHtmlSignaturePrefs.pasteignore' => $jsfile->url->url,
             'ImpHtmlSignaturePrefs.sigs' => $js
         ));
 
@@ -56,6 +53,7 @@ class IMP_Prefs_Special_HtmlSignature implements Horde_Core_Prefs_Ui_Special
         ));
         $view->addHelper('Text');
 
+        $view->img_limit = $conf['compose']['htmlsig_img_size'];
         $view->signature = $prefs->getValue('signature_html');
 
         return $view->render('signaturehtml');
@@ -65,7 +63,47 @@ class IMP_Prefs_Special_HtmlSignature implements Horde_Core_Prefs_Ui_Special
      */
     public function update(Horde_Core_Prefs_Ui $ui)
     {
-        return $GLOBALS['injector']->getInstance('IMP_Identity')->setValue('signature_html', $ui->vars->signature_html);
+        global $conf, $injector, $notification;
+
+        $filter = $injector->getInstance('Horde_Core_Factory_TextFilter');
+
+        /* Scrub HTML. */
+        $html = $filter->filter(
+            $ui->vars->signature_html,
+            'Xss',
+            array(
+                'charset' => 'UTF-8',
+                'return_dom' => true,
+                'strip_style_attributes' => false
+            )
+        );
+
+        if ($img_limit = intval($conf['compose']['htmlsig_img_size'])) {
+            $xpath = new DOMXPath($html->dom);
+            foreach ($xpath->query('//*[@src]') as $node) {
+                $src = $node->getAttribute('src');
+                if (Horde_Url_Data::isData($src)) {
+                    if (strcasecmp($node->tagName, 'IMG') === 0) {
+                        $data_url = new Horde_Url_Data($src);
+                        if (($img_limit -= strlen($data_url->data)) < 0) {
+                            $notification->push(
+                                _("The total size of your HTML signature image data has exceeded the maximum allowed."),
+                                'horde.error'
+                            );
+                            return false;
+                        }
+                    } else {
+                        /* Don't allow any other non-image data URLs. */
+                        $node->removeAttribute('src');
+                    }
+                }
+            }
+        }
+
+        return $injector->getInstance('IMP_Identity')->setValue(
+            'signature_html',
+            $html->returnHtml(array('charset' => 'UTF-8'))
+        );
     }
 
 }
